--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		</style>
 	</head>
 	<body>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
